アセット編集画面の登録と確認画面からの移動経路追加

--- a/src/pages/assets-edit/assets-edit.html
+++ b/src/pages/assets-edit/assets-edit.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the AssetsViewPage page.
+  Generated template for the AssetsEditPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -10,14 +10,12 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>AssetsView</ion-title>
+        <ion-title>AssetsEdit</ion-title>
     </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-    <button ion-button (click)="goAssetsEditPage()">
-        編集
-    </button>
+    アセット編集画面
 </ion-content>
