アセット確認画面にFABボタンの追加 + アセット確認画面タイトルの変更 #2
アセット編集画面へのアクセスを行うボタンをFABボタン化し、画面の右下に表示するようにした

--- a/src/pages/assets-view/assets-view.html
+++ b/src/pages/assets-view/assets-view.html
@@ -10,14 +10,16 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>AssetsView</ion-title>
+        <ion-title>アセット確認画面</ion-title>
     </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-    <button ion-button (click)="goAssetsEditPage()">
-        編集
-    </button>
+    <ion-fab bottom right>
+        <button ion-fab color="primary" (click)="goAssetsEditPage()">
+            <ion-icon name="options"></ion-icon>
+        </button>
+    </ion-fab>
 </ion-content>
