アセット登録画面への移動ボタンのアイコンを変更 #2
options→settings

--- a/src/pages/assets-view/assets-view.html
+++ b/src/pages/assets-view/assets-view.html
@@ -19,7 +19,7 @@
 <ion-content padding>
     <ion-fab bottom right>
         <button ion-fab color="primary" (click)="goAssetsEditPage()">
-            <ion-icon name="options"></ion-icon>
+            <ion-icon name="settings"></ion-icon>
         </button>
     </ion-fab>
 </ion-content>
