アセット情報のMockデータを確認画面に描画 #2
- 必要となるAPIアクセスProviderを追加・getAssetsメソッドの定義
- 総資産額も計算し、描画するように修正

--- a/src/pages/assets-view/assets-view.html
+++ b/src/pages/assets-view/assets-view.html
@@ -22,8 +22,21 @@
             総資産額
         </ion-card-header>
         <ion-card-content text-center class="assets-view-total-card-value">
-            1000 JPY
+            {{total}} JPY
         </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+        <ion-list inset>
+            <li ion-item *ngFor="let item of information">
+                <span item-start>
+                    {{item.id}}
+                </span>
+                <span item-end>
+                    {{item.jpy}} JPY
+                </span>
+            </li>
+        </ion-list>
     </ion-card>
 
     <ion-fab bottom right>
