add nav_button to ArticlesView page

--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -7,11 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>ArticlesViewPage</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>キャッチアップ画面</ion-title>
   </ion-navbar>
 
 </ion-header>
-
 
 <ion-content padding>
 
