--- a/src/pages/article-post/article-post.html
+++ b/src/pages/article-post/article-post.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the ArticlesViewPage page.
+  Generated template for the ArticlePostPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -10,15 +10,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>キャッチアップ</ion-title>
+    <ion-title>情報を投稿する</ion-title>
   </ion-navbar>
 
 </ion-header>
 
+
 <ion-content padding>
-  <ion-fab bottom right>
-    <button ion-fab color="secondary" (click)="goAssetsEditPage()">
-      <ion-icon name="settings"></ion-icon>
-    </button>
-  </ion-fab>
+
 </ion-content>
