--- a/src/pages/assets-edit/assets-edit.html
+++ b/src/pages/assets-edit/assets-edit.html
@@ -25,13 +25,15 @@
                     <ion-icon name="search"></ion-icon>
                 </ion-label>
                 <ion-input placeholder="例）Bitcoin, BTC, bitcoin"
-                           (input)="getInputCoinName($event.target.value)"></ion-input>
+                           (input)="getInputCoinName()"
+                           id="assets-edit-coin-add-form"
+                           [(ngModel)]="selectedCoinName"></ion-input>
             </ion-item>
 
             <ion-list inset *ngIf="isInput">
-                <li ion-item *ngFor="let coin of matchedCoinList">
+                <button ion-item *ngFor="let coin of matchedCoinList" (click)="selectCoinName(coin.id)">
                     {{coin.name}}（{{coin.symbol}}）
-                </li>
+                </button>
             </ion-list>
 
             <ion-item *ngIf="isNotFound" text-wrap>
