--- a/src/pages/assets-edit/assets-edit.html
+++ b/src/pages/assets-edit/assets-edit.html
@@ -45,6 +45,13 @@
 
     <ion-card>
         <ion-card-content>
+            <ion-list inset>
+                <li ion-item *ngFor="let asset of userAssetsList">
+                    <ion-label>{{asset.id}}</ion-label>
+                    <ion-input item-right [(ngModel)]="asset.amount" (input)="editAmount(asset.id, asset.amount)"></ion-input>
+                    <ion-icon name="trash" item-end color="danger" (click)="deleteCoinAsset(asset.id)"></ion-icon>
+                </li>
+            </ion-list>
             <!-- コイン銘柄編集・削除フォーム -->
         </ion-card-content>
     </ion-card>
