--- a/src/pages/assets-view/assets-view.html
+++ b/src/pages/assets-view/assets-view.html
@@ -10,7 +10,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>アセット確認画面</ion-title>
+        <ion-title>総資産</ion-title>
     </ion-navbar>
 
 </ion-header>
