アセット編集画面の名前の修正 #3
アセット編集画面→コイン管理

--- a/src/pages/assets-edit/assets-edit.html
+++ b/src/pages/assets-edit/assets-edit.html
@@ -10,7 +10,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>アセット編集画面</ion-title>
+        <ion-title>コイン管理</ion-title>
     </ion-navbar>
 </ion-header>
 
