--- a/src/pages/assets-view/assets-view.html
+++ b/src/pages/assets-view/assets-view.html
@@ -17,13 +17,19 @@
 
 
 <ion-content padding>
-    <ion-card color="primary">
+    <ion-card color="primary" *ngIf="total != undefined">
         <ion-card-header text-center>
             総資産額
         </ion-card-header>
         <ion-card-content text-center class="assets-view-total-card-value">
             {{addComma(total)}} JPY
         </ion-card-content>
+    </ion-card>
+
+    <ion-card color="danger" *ngIf="total == undefined">
+        <ion-card-header text-center>
+            ネットワークに接続できませんでした
+        </ion-card-header>
     </ion-card>
 
     <ion-card (click)="switchAssets()">
@@ -49,7 +55,7 @@
         </ion-list>
     </ion-card>
 
-    <ion-fab bottom right>
+    <ion-fab bottom right *ngIf="total != undefined">
         <button ion-fab color="secondary" (click)="goAssetsEditPage()">
             <ion-icon name="settings"></ion-icon>
         </button>
