--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,14 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Home</ion-title>
+        <ion-title>
+            <div class="home__header-image-wrapper">
+                <img src="../../assets/imgs/side-logo.png" alt="LOGO">
+            </div>
+        </ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <h3>Ionic Menu Starter</h3>
 
-    <p>
-        If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-    </p>
-
-    <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
