--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,4 +24,24 @@
             </button>
         </ion-buttons>
     </div>
+
+    <ion-item>
+        <div>コイン価格</div>
+        <button ion-button item-end icon-end default color="secondary" (click)="changeCompareMode()">{{compareMode}}
+            <ion-icon name="git-compare"></ion-icon>
+        </button>
+    </ion-item>
+
+    <ion-card>
+        <ion-list inset>
+            <li ion-item *ngFor="let item of userHasCoins">
+                <span item-start>{{item.symbol}}</span>
+                <span item-end>{{item.price_jpy}}</span>
+
+                <div item-end class="home__coin-price-list-perecent-plus" *ngIf="item.percent > 0">{{item.percent}}%</div>
+                <div item-end class="home__coin-price-list-perecent-minus" *ngIf="item.percent < 0">{{item.percent}}%</div>
+            </li>
+        </ion-list>
+    </ion-card>
+
 </ion-content>
