--- a/src/pages/assets-edit/assets-edit.html
+++ b/src/pages/assets-edit/assets-edit.html
@@ -10,7 +10,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>コイン管理</ion-title>
+        <ion-title>アセット編集画面</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -25,15 +25,13 @@
                     <ion-icon name="search"></ion-icon>
                 </ion-label>
                 <ion-input placeholder="例）Bitcoin, BTC, bitcoin"
-                           (input)="getInputCoinName()"
-                           id="assets-edit-coin-add-form"
-                           [(ngModel)]="selectedCoinName"></ion-input>
+                           (input)="getInputCoinName($event.target.value)"></ion-input>
             </ion-item>
 
             <ion-list inset *ngIf="isInput">
-                <button ion-item *ngFor="let coin of matchedCoinList" (click)="addCoin(coin.id)">
+                <li ion-item *ngFor="let coin of matchedCoinList">
                     {{coin.name}}（{{coin.symbol}}）
-                </button>
+                </li>
             </ion-list>
 
             <ion-item *ngIf="isNotFound" text-wrap>
@@ -45,14 +43,7 @@
 
     <ion-card>
         <ion-card-content>
-            <ion-list inset>
-                <li ion-item *ngFor="let asset of userAssetsList">
-                    <ion-label>{{asset.id}}</ion-label>
-                    <ion-input item-right [(ngModel)]="asset.amount"
-                               (input)="editAmount(asset.id, asset.amount)"></ion-input>
-                    <ion-icon name="trash" item-end color="danger" (click)="deleteCoinAsset(asset.id)"></ion-icon>
-                </li>
-            </ion-list>
+            <!-- コイン銘柄編集・削除フォーム -->
         </ion-card-content>
     </ion-card>
 </ion-content>
