コピーライトをfooterとして追加
Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -51,5 +51,5 @@
             ネットワークに接続できませんでした
         </ion-card-content>
     </ion-card>
-
+    <div class="footer__copyright">&copy; 2018 CoinPocket</div>
 </ion-content>
