--- a/src/pages/not-logged-home/not-logged-home.html
+++ b/src/pages/not-logged-home/not-logged-home.html
@@ -40,8 +40,10 @@
         </ion-item>
     </ion-card>
 
-    <button ion-button full icon-end>
+    <button ion-button full icon-end (click)="goHowToUsePage()">
         使い方はこちらから
         <ion-icon name="arrow-dropright"></ion-icon>
     </button>
+
+    <div class="footer__copyright">&copy; 2018 CoinPocket</div>
 </ion-content>
