アプリについて画面へのアクセスルートを追加 #12
Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/pages/not-logged-home/not-logged-home.html
+++ b/src/pages/not-logged-home/not-logged-home.html
@@ -40,8 +40,8 @@
         </ion-item>
     </ion-card>
 
-    <button ion-button full icon-end (click)="goHowToUsePage()">
-        使い方はこちらから
+    <button ion-button full icon-end (click)="goHowToUsePage()" color="secondary">
+        詳しくはこちら
         <ion-icon name="arrow-dropright"></ion-icon>
     </button>
 
