--- a/src/pages/not-logged-home/not-logged-home.html
+++ b/src/pages/not-logged-home/not-logged-home.html
@@ -40,8 +40,8 @@
         </ion-item>
     </ion-card>
 
-    <button ion-button full icon-end (click)="goHowToUsePage()" color="secondary">
-        詳しくはこちら
+    <button ion-button full icon-end (click)="goHowToUsePage()">
+        使い方はこちらから
         <ion-icon name="arrow-dropright"></ion-icon>
     </button>
 
