delete useless code

--- a/src/pages/article-post/article-post.html
+++ b/src/pages/article-post/article-post.html
@@ -4,12 +4,18 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>情報を投稿する</ion-title>
+        <ion-title>投稿</ion-title>
     </ion-navbar>
 
 </ion-header>
 
-
 <ion-content padding>
-
+    <ion-card>
+        <ion-card-header>
+            Header
+        </ion-card-header>
+        <ion-card-content>
+            The British use the term "header", but the American term "head-shot" the English simply refuse to adopt.
+        </ion-card-content>
+    </ion-card>
 </ion-content>
