--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -20,7 +20,7 @@
         <ion-card>
 
             <ion-item>
-                <h2> {{ article.user_name }} </h2>
+                <ion-card-header> {{ article.user_name }} </ion-card-header>
                 <p item-end> {{ article.created_at }} </p>
             </ion-item>
 
@@ -66,6 +66,11 @@
 
         </ion-card>
     </div>
+    <ion-card color="danger" *ngIf="isNetworkError">
+        <ion-card-header text-center>
+            ネットワークに接続できませんでした
+        </ion-card-header>
+    </ion-card>
 
     <ion-fab bottom right>
         <button ion-fab color="secondary" (click)="goArticlePostPage()">
