--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -74,7 +74,7 @@
 
     <ion-fab bottom right>
         <button ion-fab color="secondary" (click)="goArticlePostPage()">
-            <ion-icon name="add"></ion-icon>
+            <ion-icon name="create"></ion-icon>
         </button>
     </ion-fab>
 </ion-content>
