投稿時刻と現在時刻の比較処理の実装（キャッチアップ画面） #14
Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -20,7 +20,7 @@
         <ion-card>
 
             <ion-item>
-                <ion-card-header> {{ article.user_name }} </ion-card-header>
+                <ion-card-header> {{ article.user_name }}</ion-card-header>
                 <p item-end> {{ article.created_at }} </p>
             </ion-item>
 
@@ -44,7 +44,7 @@
             </ion-item>
             <ion-item>
                 <ion-note item-end>
-                    11h ago
+                    {{article.howLongAgo}} {{article.unitOfTime}}
                 </ion-note>
             </ion-item>
             <ion-grid>
