--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -50,13 +50,21 @@
             <ion-grid>
                 <ion-row>
                     <ion-col>
-                        <button ion-button icon-left full (click)="toggleGood(article.id)">
+                        <button *ngIf="!article.didGoodPush" class="reaction-button good" ion-button icon-left full (click)="toggleGood(article)">
+                            <ion-icon name="thumbs-up"></ion-icon>
+                            <div> Good: {{ article.good }}</div>
+                        </button>
+                        <button *ngIf="article.didGoodPush" class="reaction-button pushed-good" ion-button icon-left full (click)="toggleGood(article)">
                             <ion-icon name="thumbs-up"></ion-icon>
                             <div> Good: {{ article.good }}</div>
                         </button>
                     </ion-col>
                     <ion-col>
-                        <button color="danger" ion-button icon-left full (click)="toggleBad(article.id)">
+                        <button *ngIf="!article.didBadPush" class="reaction-button bad" ion-button icon-left full (click)="toggleBad(article)">
+                            <ion-icon name="thumbs-down"></ion-icon>
+                            <div> Bad: {{article.bad}}</div>
+                        </button>
+                        <button *ngIf="article.didBadPush" class="reaction-button pushed-bad" ion-button icon-left full (click)="toggleBad(article)">
                             <ion-icon name="thumbs-down"></ion-icon>
                             <div> Bad: {{article.bad}}</div>
                         </button>
