#14 の変更を適用 #13
コピペ実装なので、将来的に
コンポーネントとかにくくり出した方がいい気がする

--- a/src/pages/user-articles-view/user-articles-view.html
+++ b/src/pages/user-articles-view/user-articles-view.html
@@ -41,7 +41,7 @@
             </ion-item>
             <ion-item>
                 <ion-note item-end>
-                    11h ago
+                    {{article.howLongAgo}} {{article.unitOfTime}}
                 </ion-note>
             </ion-item>
         </ion-card>
