--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -12,39 +12,50 @@
 
 <ion-content padding>
     <form (ngSubmit)="signUp()">
-        <ion-item *ngIf="isError" color="danger">
-            入力値が不正です
+        <ion-item *ngFor="let error of errorList" color="danger">
+            {{ error }}
         </ion-item>
+
         <ion-item>
             <ion-label floating>ユーザ名</ion-label>
             <ion-input type="text" [(ngModel)]="name" name="name"></ion-input>
         </ion-item>
+
         <ion-list radio-group [(ngModel)]="sex" name="sex">
             <ion-list-header>
                 性別
             </ion-list-header>
-
-            <ion-item>
-                <ion-label>男</ion-label>
-                <ion-radio value="man"></ion-radio>
-            </ion-item>
-            <ion-item>
-                <ion-label>女</ion-label>
-                <ion-radio value="woman"></ion-radio>
-            </ion-item>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>男</ion-label>
+                        <ion-radio value="man"></ion-radio>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>女</ion-label>
+                        <ion-radio value="woman"></ion-radio>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
         </ion-list>
+
         <ion-item>
             <ion-label>誕生日</ion-label>
             <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="birthday" name="birthday"></ion-datetime>
         </ion-item>
+
         <ion-item>
             <ion-label floating>メールアドレス</ion-label>
             <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
         </ion-item>
+
         <ion-item>
             <ion-label floating>パスワード</ion-label>
             <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
         </ion-item>
+
         <ion-item>
             <ion-label floating>パスワード(2回目)</ion-label>
             <ion-input type="password" [(ngModel)]="confirmationPassword" name="confirmationPassword"></ion-input>
