--- a/src/pages/user-articles-view/user-articles-view.html
+++ b/src/pages/user-articles-view/user-articles-view.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
     <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
         <ion-title>あなたの投稿一覧</ion-title>
     </ion-navbar>
-
 </ion-header>
 
 
