--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -48,7 +48,7 @@
 
         <ion-item>
             <ion-label floating>メールアドレス</ion-label>
-            <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
+            <ion-input type="text" [(ngModel)]="mail" name="mail"></ion-input>
         </ion-item>
 
         <ion-item>
