add userEditPage link
Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/pages/user-detail/user-detail.html
+++ b/src/pages/user-detail/user-detail.html
@@ -46,7 +46,7 @@
     </ion-list>
 
     <ion-fab bottom right>
-        <button ion-fab round color="secondary">
+        <button ion-fab round color="secondary" (click)="goUserEditPage()">
             <ion-icon name="create"></ion-icon>
         </button>
     </ion-fab>
