--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -18,10 +18,10 @@
 
         <ion-item>
             <ion-label floating>ユーザ名</ion-label>
-            <ion-input type="text" [(ngModel)]="name" name="name"></ion-input>
+            <ion-input type="text" [(ngModel)]="userData.name" name="name"></ion-input>
         </ion-item>
 
-        <ion-list radio-group [(ngModel)]="sex" name="sex">
+        <ion-list radio-group [(ngModel)]="userData.sex" name="sex">
             <ion-list-header>
                 性別
             </ion-list-header>
@@ -43,12 +43,12 @@
 
         <ion-item>
             <ion-label>誕生日</ion-label>
-            <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="birthday" name="birthday"></ion-datetime>
+            <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="userData.birthday" name="birthday"></ion-datetime>
         </ion-item>
 
         <ion-item>
             <ion-label floating>メールアドレス</ion-label>
-            <ion-input type="text" [(ngModel)]="mail" name="mail"></ion-input>
+            <ion-input type="text" [(ngModel)]="userData.mail" name="mail"></ion-input>
         </ion-item>
 
         <ion-item>
