adapt beego:usersEdit/userDetail
Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/pages/user-detail/user-detail.html
+++ b/src/pages/user-detail/user-detail.html
@@ -41,7 +41,7 @@
             <span class="info-label">
                 誕生日
             </span>
-            <span item-end>{{userData.birthday}}</span>
+            <span item-end>{{birthday}}</span>
         </ion-item>
     </ion-list>
 
