adapt beego:article
Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -20,7 +20,7 @@
         <ion-card>
 
             <ion-item>
-                <ion-card-header> {{ article.user_name }}</ion-card-header>
+                <h2> {{ article.user_name }}</h2>
                 <p item-end> {{ article.created_at }} </p>
             </ion-item>
 
