--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -50,21 +50,21 @@
             <ion-grid>
                 <ion-row>
                     <ion-col>
-                        <button *ngIf="!article.didGoodPush" class="reaction-button good disable-hover" ion-button icon-left full (click)="toggleGood(article)">
+                        <button *ngIf="evaluation['good'].indexOf(article.id) == -1" class="reaction-button good disable-hover" ion-button icon-left full (click)="toggleGood(article)">
                             <ion-icon name="thumbs-up"></ion-icon>
                             <div> Good: {{ article.good }}</div>
                         </button>
-                        <button *ngIf="article.didGoodPush" class="reaction-button pushed-good" ion-button icon-left full (click)="toggleGood(article)">
+                        <button *ngIf="evaluation['good'].indexOf(article.id) != -1" class="reaction-button pushed-good" ion-button icon-left full (click)="toggleGood(article)">
                             <ion-icon name="thumbs-up"></ion-icon>
                             <div> Good: {{ article.good }}</div>
                         </button>
                     </ion-col>
                     <ion-col>
-                        <button *ngIf="!article.didBadPush" class="reaction-button bad disable-hover" ion-button icon-left full (click)="toggleBad(article)">
+                        <button *ngIf="evaluation['bad'].indexOf(article.id) == -1" class="reaction-button bad disable-hover" ion-button icon-left full (click)="toggleBad(article)">
                             <ion-icon name="thumbs-down"></ion-icon>
                             <div> Bad: {{article.bad}}</div>
                         </button>
-                        <button *ngIf="article.didBadPush" class="reaction-button pushed-bad" ion-button icon-left full (click)="toggleBad(article)">
+                        <button *ngIf="evaluation['bad'].indexOf(article.id) != -1" class="reaction-button pushed-bad" ion-button icon-left full (click)="toggleBad(article)">
                             <ion-icon name="thumbs-down"></ion-icon>
                             <div> Bad: {{article.bad}}</div>
                         </button>
