--- a/src/pages/articles-view/articles-view.html
+++ b/src/pages/articles-view/articles-view.html
@@ -39,6 +39,10 @@
             </ion-item>
             <ion-item>
                 <a href="#" (click)="openUrl(article.url)">
+                    <div class="site-info-wrapper">
+                        <span class="site-name">{{article.site_name}}</span>
+                        <p class="site-title">{{article.site_title}}</p>
+                    </div>
                     <img src="{{ article.image }}">
                 </a>
             </ion-item>
@@ -50,21 +54,27 @@
             <ion-grid>
                 <ion-row>
                     <ion-col>
-                        <button *ngIf="evaluation['good'].indexOf(article.id) == -1" class="reaction-button good disable-hover" ion-button icon-left full (click)="toggleGood(article)">
+                        <button *ngIf="evaluation['good'].indexOf(article.id) == -1"
+                                class="reaction-button good disable-hover" ion-button icon-left full
+                                (click)="toggleGood(article)">
                             <ion-icon name="thumbs-up"></ion-icon>
                             <div> Good: {{ article.good }}</div>
                         </button>
-                        <button *ngIf="evaluation['good'].indexOf(article.id) != -1" class="reaction-button pushed-good" ion-button icon-left full (click)="toggleGood(article)">
+                        <button *ngIf="evaluation['good'].indexOf(article.id) != -1" class="reaction-button pushed-good"
+                                ion-button icon-left full (click)="toggleGood(article)">
                             <ion-icon name="thumbs-up"></ion-icon>
                             <div> Good: {{ article.good }}</div>
                         </button>
                     </ion-col>
                     <ion-col>
-                        <button *ngIf="evaluation['bad'].indexOf(article.id) == -1" class="reaction-button bad disable-hover" ion-button icon-left full (click)="toggleBad(article)">
+                        <button *ngIf="evaluation['bad'].indexOf(article.id) == -1"
+                                class="reaction-button bad disable-hover" ion-button icon-left full
+                                (click)="toggleBad(article)">
                             <ion-icon name="thumbs-down"></ion-icon>
                             <div> Bad: {{article.bad}}</div>
                         </button>
-                        <button *ngIf="evaluation['bad'].indexOf(article.id) != -1" class="reaction-button pushed-bad" ion-button icon-left full (click)="toggleBad(article)">
+                        <button *ngIf="evaluation['bad'].indexOf(article.id) != -1" class="reaction-button pushed-bad"
+                                ion-button icon-left full (click)="toggleBad(article)">
                             <ion-icon name="thumbs-down"></ion-icon>
                             <div> Bad: {{article.bad}}</div>
                         </button>
